dashboard api optimized